--- a/TravelAgenda.csproj
+++ b/TravelAgenda.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DayPilot" Version="5.0.303" />
     <PackageReference Include="GoogleApi" Version="5.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
