Ok additional info
Google maps link, view schedule, ok additional informations, ok restaurants top 10

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,10 @@
     "ApiKey": "AIzaSyDKsay2BBY95dTQ9tfx7oc35yG9b9G5AAk"
   },
   "ConnectionStrings": {
-    "TravelAgenda": "Server=EMI\\SQLEXPRESS; Database = TravelAgenda; Trusted_Connection=True; TrustServerCertificate=True"
+    "TravelAgenda": "Server=(localdb)\\mssqllocaldb; Database = TravelAgenda; Trusted_Connection=True; TrustServerCertificate=True"
+  },
+  "WeatherAPI": {
+    "ApiKey": "8d209d325ff94d04afe202115251005"
   },
   "AllowedHosts": "*"
 }
